# ESP32C3_IDF_ML307R_MQTT_AT_OTA

./: CMakeLists.txt  partitions_4M.csv  sdkconfig  sdkconfig.old
.cache/clangd/index/: at_modem.cc.0CDB8D505ACDFB56.idx  at_modem.h.7FBA19BF65889331.idx  at_uart.cc.55477D89AF05F1A7.idx  at_uart.h.AFF7A03FDA830808.idx  beehive_system.c.6FE4ADB2EB6CD295.idx  beehive_system.h.FEC44D6B479330D7.idx  bsp_dht11.c.B0B09EDC2E7D2027.idx  bsp_dht11.h.73CBC96E9699978D.idx  ec801e_at_modem.cc.12849258BCF532E1.idx  ec801e_at_modem.h.782BCE4236DB6C36.idx  ec801e_mqtt.cc.36ABCFCAEDE2AFCF.idx  ec801e_mqtt.h.5EBD2E3A3FEB81D9.idx  ec801e_ssl.cc.32E8E0DDB635C8E3.idx  ec801e_ssl.h.02D232204491E48F.idx  ec801e_tcp.cc.194EE5713C2FB4C8.idx  ec801e_tcp.h.5960345897A6CF40.idx  ec801e_udp.cc.ECDA1F85929F2C99.idx  ec801e_udp.h.A98FDFCAD5257059.idx  esp_io_expander.c.50CBC5A8F552382A.idx  esp_io_expander.h.4490C5A3C6AF700D.idx  esp_io_expander_tca9554.c.1327AC26D94F97B8.idx  esp_io_expander_tca9554.h.547DB66D0F79DFF8.idx  (+51 more)
Project_Information/: MQTT硬件接入文档2.md
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp
main/DHT11/: bsp_dht11.c  bsp_dht11.h
main/ML307/: ml307_mqtt_client.cpp  ml307_mqtt_client.h  ml307_mqtt_config.h
main/ML307_MQTT/: ml307_mqtt_client.cpp  ml307_mqtt_client.h  ml307_mqtt_config.h
main/OTA/: ota_task.c  ota_task.h
main/TIME/: ml307_sntp_time.cpp  ml307_sntp_time.h  wifi_sntp_time.c  wifi_sntp_time.h
main/WIFI_MQTT/: beehive_system.c  beehive_system.h  beehive_system_config.h
main/XL9555/: xl9555_ir_counter.c  xl9555_ir_counter.h
(+15 files in other folders)
